--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,8 +3,9 @@ name: Build Client
 # 监听版本号变化
 on:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   ios:
